# Learn_Better

./: .env.example  .gitignore  Goal.md  Makefile  README.md  docker-compose.yml  magic-pdf.json  main.py  pyproject.toml  pytest.ini
database/: init.sql  neo4j_constraints.cypher
docs/: PROJECT_UPDATE_SUMMARY.md  initial_spec.md
frontend/: vite.config.js
frontend/src/: App.jsx  index.css
on_api/: chat.py  router_main.py
open_notebook/commands/: __init__.py
scripts/: start_services.sh
src/: __init__.py  config.py  dependencies.py
src/database/: graph_storage.py  init_db.py
src/ingestion/: __init__.py  binder.py  document_processor.py  ingestion_engine.py  vector_storage.py
src/models/: agent.py  fitbit.py  orm.py  schemas.py
src/navigation/: __init__.py
src/path_resolution/: __init__.py  content_retriever.py
src/routers/: ai.py  analytics.py  cognitive.py  curriculum.py  dashboard.py  documents.py  fitbit.py  goals.py  multidoc_graph.py  navigation.py  practice.py  resources.py  study.py
src/services/: cognitive_service.py  concept_tutor.py  curriculum_service.py  document_service.py  email_service.py  fitbit_service.py  goal_agent.py  knowledge_graph_service.py  (+10 more)
tests/: __init__.py  test_property_content_chunking.py  test_property_data_completeness.py  test_property_document_conversion.py  test_property_duplicate_handling.py  test_property_error_validation.py  test_property_graph_extraction.py  test_property_initialization.py  test_property_name_normalization.py  test_property_schema_validation.py  test_property_storage_consistency.py
(+235 files in other folders)
